--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_USER=admin_panel
-DB_PASSWORD=admin
-DB_NAME=admin_panel
-PORT=5000
+DB_HOST=if0_38943051_parenting_backend
+DB_USER=if0_38943051
+DB_PASSWORD=harishgadiya
+DB_NAME=sql110.infinityfree.com
+
 JWT_SECRET=$I'<`dnR23NoY]{
