--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-DB_HOST=if0_38943051_parenting_backend
-DB_USER=if0_38943051
-DB_PASSWORD=harishgadiya
-DB_NAME=sql110.infinityfree.com
+DB_HOST=RAILWAY_PRIVATE_DOMAIN   # Replace with your actual host
+DB_USER=root
+DB_PASSWORD=XXuPJNTFRDWBkLdZwusRoktBErUbdIDX
+DB_NAME=railway
+DB_PORT=3306
+DB_SSL=false
+
 
 JWT_SECRET=$I'<`dnR23NoY]{
