--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=RAILWAY_PRIVATE_DOMAIN   # Replace with your actual host
+DB_HOST=ballast.proxy.rlwy.net
+DB_PORT=17756
 DB_USER=root
 DB_PASSWORD=XXuPJNTFRDWBkLdZwusRoktBErUbdIDX
 DB_NAME=railway
-DB_PORT=3306
 DB_SSL=false
 
 
