--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=ballast.proxy.rlwy.net
+DB_HOST=bglj4phqqp1le1uyopfa-mysql.services.clever-cloud.com
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=XXuPJNTFRDWBkLdZwusRoktBErUbdIDX
-DB_NAME=railway
+DB_USER=ulxzygvps5klpl1y
+DB_PASSWORD=a9nN1jMwSp6vM7Eb17QX
+DB_NAME=bglj4phqqp1le1uyopfa
 DB_SSL=false
 
 
