--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DB_HOST=bglj4phqqp1le1uyopfa-mysql.services.clever-cloud.com
+DB_HOST=mysql.railway.internal
 DB_PORT=3306
-DB_USER=ulxzygvps5klpl1y
-DB_PASSWORD=a9nN1jMwSp6vM7Eb17QX
-DB_NAME=bglj4phqqp1le1uyopfa
-DB_SSL=false
+DB_USER=root
+DB_PASSWORD=XXuPJNTFRDWBkLdZwusRoktBErUbdIDX
+DB_NAME=railway
 
+DATABASE_URL=mysql://root:XXuPJNTFRDWBkLdZwusRoktBErUbdIDX@ballast.proxy.rlwy.net:17756/railway
 
 JWT_SECRET=$I'<`dnR23NoY]{
