--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 DB_HOST=mysql.railway.internal
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=XXuPJNTFRDWBkLdZwusRoktBErUbdIDX
+DB_PASSWORD=cEInLYSPPHohsWeHJngXNvcsVfKHOLle
 DB_NAME=railway
 
-DATABASE_URL=mysql://root:XXuPJNTFRDWBkLdZwusRoktBErUbdIDX@ballast.proxy.rlwy.net:17756/railway
+DATABASE_URL=mysql://root:cEInLYSPPHohsWeHJngXNvcsVfKHOLle@gondola.proxy.rlwy.net:28078/railway
 
 JWT_SECRET=$I'<`dnR23NoY]{
