--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
-DB_HOST=mysql.railway.internal
+DB_HOST=gondola.proxy.rlwy.net
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=cEInLYSPPHohsWeHJngXNvcsVfKHOLle
 DB_NAME=railway
 
-DATABASE_URL=mysql://root:cEInLYSPPHohsWeHJngXNvcsVfKHOLle@gondola.proxy.rlwy.net:28078/railway
 
 JWT_SECRET=$I'<`dnR23NoY]{
