--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "openssl": "^2.0.0",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
