--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ DB_USER=root
 DB_PASSWORD=cEInLYSPPHohsWeHJngXNvcsVfKHOLle
 DB_NAME=railway
 
+OPENCAGE_API_KEY=a0bd3279928b4bf98c801a74d8acecd5
 
 JWT_SECRET=$I'<`dnR23NoY]{
