--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST=gondola.proxy.rlwy.net
-DB_PORT=28078
+DB_HOST=shuttle.proxy.rlwy.net
+DB_PORT=51747
 DB_USER=root
-DB_PASSWORD=cEInLYSPPHohsWeHJngXNvcsVfKHOLle
+DB_PASSWORD=rpkeKctFXBpmmnInLpziXZSVEDWKOnhk
 DB_NAME=railway
 
 OPENCAGE_API_KEY=a0bd3279928b4bf98c801a74d8acecd5
