--- a/.env
+++ b/.env
@@ -6,4 +6,7 @@ DB_NAME=railway
 
 OPENCAGE_API_KEY=a0bd3279928b4bf98c801a74d8acecd5
 
+MAIL_USER=ganeshbirale87@gmail.com
+MAIL_PASS=*Neuroeq#
+
 JWT_SECRET=$I'<`dnR23NoY]{
