--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_NAME=railway
 
 OPENCAGE_API_KEY=a0bd3279928b4bf98c801a74d8acecd5
 
-MAIL_USER=ganeshbirale87@gmail.com
-MAIL_PASS=*Neuroeq#
+MAIL_USER=contact@neuroeq.in
+MAIL_PASS=*Neuroeq1#
 
 JWT_SECRET=$I'<`dnR23NoY]{
