--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ DB_NAME=railway
 OPENCAGE_API_KEY=a0bd3279928b4bf98c801a74d8acecd5
 
 MAIL_USER=contact@neuroeq.in
-MAIL_PASS=*Neuroeq1#     # This is the password you just set
+MAIL_PASS="*Neuroeq1#"     # This is the password you just set
 
 JWT_SECRET=$I'<`dnR23NoY]{
