--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ DB_NAME=railway
 OPENCAGE_API_KEY=a0bd3279928b4bf98c801a74d8acecd5
 
 MAIL_USER=contact@neuroeq.in
-MAIL_PASS="*Neuroeq1#"     # This is the password you just set
+MAIL_PASS="*Neuroeq1#"     
+
+RAZORPAY_KEY_ID=rzp_test_GBV0HihjfX0mDv
+RAZORPAY_KEY_SECRET=XKew9V0pqCpRZmPSNj47ZAAX
 
 JWT_SECRET=$I'<`dnR23NoY]{
