--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -25,6 +26,7 @@
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
     "openssl": "^2.0.0",
+    "razorpay": "^2.9.6",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
