--- a/.env
+++ b/.env
@@ -12,4 +12,6 @@ MAIL_PASS="*Neuroeq1#"
 RAZORPAY_KEY_ID=rzp_test_GBV0HihjfX0mDv
 RAZORPAY_KEY_SECRET=XKew9V0pqCpRZmPSNj47ZAAX
 
+NODE_ENV=development
+
 JWT_SECRET=$I'<`dnR23NoY]{
