--- a/.env
+++ b/.env
@@ -14,4 +14,8 @@ RAZORPAY_KEY_SECRET=XKew9V0pqCpRZmPSNj47ZAAX
 
 NODE_ENV=development
 
+CLOUDINARY_CLOUD_NAME=dr7sjhsvg
+CLOUDINARY_API_KEY=584799511817412
+CLOUDINARY_API_SECRET=BPe-4EY_svpg7JNgtbBIlgA2a_Y
+
 JWT_SECRET=$I'<`dnR23NoY]{
