--- a/.env
+++ b/.env
@@ -13,6 +13,8 @@ RAZORPAY_KEY_ID=rzp_test_J6th8hiSIfdX2C
 RAZORPAY_KEY_SECRET=4e03umVZe0GkwcdhqaGRhPkX
 RAZORPAY_WEBHOOK_SECRET=subscriptions
 
+NODE_ENV=development
+
 CLOUDINARY_CLOUD_NAME=dr7sjhsvg
 CLOUDINARY_API_KEY=584799511817412
 CLOUDINARY_API_SECRET=BPe-4EY_svpg7JNgtbBIlgA2a_Y
