--- a/.env
+++ b/.env
@@ -13,6 +13,10 @@ RAZORPAY_KEY_ID=rzp_test_J6th8hiSIfdX2C
 RAZORPAY_KEY_SECRET=4e03umVZe0GkwcdhqaGRhPkX
 RAZORPAY_WEBHOOK_SECRET=subscriptions
 
+PLAN_MONTHLY=plan_QnTkv9jZTe1SaF
+PLAN_SIX_MONTHS=plan_QnTpLcL3acuGsQ
+PLAN_YEARLY=plan_QnTpjaSYfnBI2z
+
 NODE_ENV=development
 
 CLOUDINARY_CLOUD_NAME=dr7sjhsvg
