--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-DB_HOST=shuttle.proxy.rlwy.net
-DB_PORT=51747
-DB_USER=root
-DB_PASSWORD=rpkeKctFXBpmmnInLpziXZSVEDWKOnhk
-DB_NAME=railway
+DB_HOST=neuroeq-database.c14wquiqe2qh.ap-south-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASSWORD=admin123
+DB_NAME=mydb
 
 OPENCAGE_API_KEY=a0bd3279928b4bf98c801a74d8acecd5
 
