🛠️ Fix EB GitHub Actions YAML (printf workaround)

--- a/.github/workflows/deploy-to-eb.yml
+++ b/.github/workflows/deploy-to-eb.yml
@@ -3,7 +3,7 @@ name: 🚀 Deploy to Elastic Beanstalk
 on:
   push:
     branches:
-      - main  # update if your default branch is not 'main'
+      - main
 
 jobs:
   deploy:
@@ -31,14 +31,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: 🧠 Initialize EB project config file
+      - name: 🧠 Create .elasticbeanstalk/config.yml
         run: |
           mkdir -p .elasticbeanstalk
-          echo "global:
-  application_name: ${{ secrets.EB_APP_NAME }}
-  default_region: ${{ secrets.AWS_REGION }}
-  profile: null
-  workspace_type: Application" > .elasticbeanstalk/config.yml
+          printf "global:\n  application_name: %s\n  default_region: %s\n  profile: null\n  workspace_type: Application\n" "${{ secrets.EB_APP_NAME }}" "${{ secrets.AWS_REGION }}" > .elasticbeanstalk/config.yml
 
       - name: 🚀 Deploy to Elastic Beanstalk
         run: |
